Disbale metrics and login

--- a/build.gradle
+++ b/build.gradle
@@ -25,13 +25,14 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
-	// reporting tracing to zipkin
-	implementation 'io.micrometer:micrometer-observation'
-	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
-	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
-
-	//observability
-	implementation 'io.micrometer:micrometer-registry-prometheus'
+	// FOR NOW, WE DON WANT TO PUBLISH LOGs AND METRICS
+//	// reporting tracing to zipkin
+//	implementation 'io.micrometer:micrometer-observation'
+//	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
+//	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
+//
+//	//observability
+//	implementation 'io.micrometer:micrometer-registry-prometheus'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
