--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,19 +8,19 @@ spring:
 #    active: localhostRouter-withEureka # This will be using Eureka Server
 #    active: localhostRouter-noEureka # This will be using by calling: http://localhost:9090/api/v1/dragonball/names
 
-logging.pattern.level: "%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
+#logging.pattern.level: "%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
 management:
-  tracing:
-    sampling:
-      #      used for tracing
-      probability: 1.0
+#  tracing:
+#    sampling:
+#      #      used for tracing
+#      probability: 1.0
   endpoints:
     web:
       exposure:
         include: '*'
-  metrics:
-    distribution:
-      percentiles-histogram:
-        http:
-          server:
-            requests: true
+#  metrics:
+#    distribution:
+#      percentiles-histogram:
+#        http:
+#          server:
+#            requests: true
